# pymt_ecsimplesnow

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  babel.toml  environment.yml  meson.build  plugin.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst
examples/: ecsimplesnow_pymt_ex.py
meta/ECSimpleSnow/: api.yaml  info.yaml  parameters.yaml  run.yaml  snow_model.cfg
pymt_ecsimplesnow/: __init__.py  _bmi.py  _version.py  bmi.py
pymt_ecsimplesnow/lib/: __init__.py  bmi_interoperability.f90  bmi_interoperability.mod  ecsimplesnow.c  ecsimplesnow.pyx
recipe/: meta.yaml
